# UploadGram

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi-publish.yaml
uploadgram/: __init__.py  config.py  get_config.py  humanbytes.py  progress.py  run_shell_command.py  shell.py  take_screen_shot.py  time_formatter.py  upload.py  uploadgram.py
